WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302688
REGRESSION(
303149@main
): Broke Internal watchOS build
https://bugs.webkit.org/show_bug.cgi?id=302688
Summary
REGRESSION(303149@main): Broke Internal watchOS build
Jonathan Bedard
Reported
2025-11-17 21:22:32 PST
Revert
303149@main
because REGRESSION(
303149@main
): Broke Internal watchOS build.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2025-11-17 21:22:42 PST
<
rdar://problem/164936734
>
Jonathan Bedard
Comment 2
2025-11-17 21:25:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54092
EWS
Comment 3
2025-11-17 21:58:34 PST
Committed
303168@main
(0966647a0909): <
https://commits.webkit.org/303168@main
> Reviewed commits have been landed. Closing PR #54092 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug