REGRESSION(303149@main): Broke Internal watchOS build https://bugs.webkit.org/show_bug.cgi?id=302688 rdar://164936734

Unreviewed build fix.

* Source/bmalloc/libpas/src/libpas/pas_system_heap.h:
(pas_system_heap_is_enabled):

Canonical link: https://commits.webkit.org/303168@main